Finished aligning the album correctly

--- a/user_content.css
+++ b/user_content.css
@@ -7,7 +7,10 @@
   height: 50%;
 }
 .album{
-  width: 150px;
-  height:200px;
+  width: 100%;
+  height:80%;
   background-color: grey;
+}
+.wrapper_for_album{
+  width:40%;
 }
